src/snapshots/lang_rs__tokeniser__tests__fixtures__functions.snap
---
source: src/tokeniser.rs
expression: tokens
---
[
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "my_first_func",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "func_with_closure",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "top_stuff",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Name(
            "top_stuff",
        ),
    ),
    Ok(
        IndentDecr,
    ),
]
