src/snapshots/lang_rs__tokeniser__tests__fixtures__maths.snap
---
source: src/tokeniser.rs
expression: tokens
---
[
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        BinOp(
            Plus,
        ),
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        Name(
            "z",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Minus,
        ),
    ),
    Ok(
        Constant(
            Int(
                3,
            ),
        ),
    ),
    Ok(
        Name(
            "z",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Name(
            "z",
        ),
    ),
]
